--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_widget_from_html: ^0.10.0
   url_launcher: ^6.2.0
   flutter_launcher_icons: ^0.13.1
+  # provider: ^6.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
