--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   photo_view: ^0.14.0
   gal: ^2.3.0      
   permission_handler: ^11.0.1
+  image_picker: ^1.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
